name:                mlf
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >= 1.8

executable mlf
  main-is: mlf.hs      
  other-modules:
    Applicative,
    Error,
    Hoist,
    Int,
    Lex,
    Loc,
    Name,
    Parse,
    Parser,
    Path,
    Permission,
    Rename,
    ST,
    STIntRef,
    Stream,
    Supply,
    Token,
    Type.BindingFlag,
    Type.Graphic,
    Type.Syntactic,
    Type.Restricted,
    Unify,
    UnionFind
  build-depends:
    base == 4.6.*,
    array,
    bytestring,
    cmdargs,
    comonad,
    comonads-fd,
    containers,
    hashable,
    unordered-containers,
    mtl,
    semigroups,
    semigroupoids,
    text,
    transformers,
    utf8-string,
    wl-pprint-extras
  ghc-options: -Wall -O2
  build-tools: alex, happy
