name:                mlf
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >= 1.8

executable mlf
  main-is: mlf.hs      
  other-modules:
    Applicative,
    Catch,
    Function,
    Hoist,
    Id,
    Int,
    IntMap,
    IntSet,
    Lex,
    Loc,
    Monad,
    Name,
    Parse,
    Parser,
    Path,
    Product,
    Rename,
    ST,
    STIntRef,
    Stream,
    Sum,
    Supply,
    Token,
    Type.BindingFlag,
    Type.Graphic,
    Type.Graphic.Postorder,
    Type.Graphic.Preorder,
    Type.Permission,
    Type.Syntactic,
    Type.Restricted,
    Unify,
    UnionFind
  build-depends:
    base == 4.6.*,
    array,
    bytestring,
    cmdargs,
    comonad,
    comonads-fd,
    containers,
    hashable,
    unordered-containers,
    mtl,
    semigroups,
    semigroupoids,
    text,
    transformers,
    utf8-string,
    wl-pprint-extras,
    terminfo,
    wl-pprint-terminfo
  ghc-options: -Wall -O2
  build-tools: alex, happy
