name:                mlf
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >= 1.8

extra-source-files:
  HLint.hs

executable mlf
  hs-source-dirs: src
  main-is: mlf.hs      
  other-modules:
    Applicative,
    Arrow,
    Catch,
    Function,
    Hoist,
    Id,
    Int,
    IntMap,
    IntSet,
    Lex,
    List,
    Loc,
    Loop,
    Monad,
    Name,
    Parse,
    Parser,
    Path,
    Product,
    Rename,
    ST,
    STIntRef,
    Stream,
    Sum,
    Supply,
    Token,
    Type.BindingFlag,
    Type.Graphic,
    Type.Node
    Type.Permission,
    Type.Syntactic,
    Type.Restricted,
    Type.Unify,
    UnionFind
  build-depends:
    base == 4.6.*,
    array,
    bytestring,
    cmdargs,
    comonad,
    comonads-fd,
    containers,
    free,
    hashable,
    unordered-containers,
    mtl,
    semigroups,
    semigroupoids,
    tagged,
    text,
    transformers,
    utf8-string,
    wl-pprint-extras,
    terminfo,
    wl-pprint-terminfo
  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -fwarn-monomorphism-restriction
    -O2
  build-tools: alex, happy
